hphp/test/zend/good/Zend/tests/clone_003.php.expectf

Notice: Undefined variable: b in %s/clone_003.php on line 3

Fatal error: clone called on non-object in %s/clone_003.php on line 3
